--- a/Lemon/Resources/en.lproj/ToolConfig.plist
+++ b/Lemon/Resources/en.lproj/ToolConfig.plist
@@ -110,24 +110,7 @@ running at startup</string>
 		<key>reportId</key>
 		<integer>7207</integer>
 	</dict>
-	<key>McPrivacyFile</key>
-	<dict>
-		<key>toolId</key>
-		<integer>7</integer>
-		<key>toolPicName</key>
-		<string>icon_tool_lemon_lab</string>
-		<key>className</key>
-		<string>lemon_lab</string>
-		<key>toolName</key>
-		<string>Lemon Lab</string>
-		<key>toolDesc</key>
-		<string>Discover more free Apps</string>
-		<key>recommend</key>
-		<false/>
-		<key>reportId</key>
-		<integer>7207</integer>
-	</dict>
-	<key>McLemonLab</key>
+	<key>McDiskAnalyzer</key>
 	<dict>
 		<key>toolId</key>
 		<integer>6</integer>
@@ -143,7 +126,24 @@ running at startup</string>
 		<key>recommend</key>
 		<false/>
 		<key>reportId</key>
-		<integer>7207</integer>
+		<integer>7208</integer>
+	</dict>
+	<key>McLemonLab</key>
+	<dict>
+		<key>toolId</key>
+		<integer>7</integer>
+		<key>toolPicName</key>
+		<string>icon_tool_lemon_lab</string>
+		<key>className</key>
+		<string>lemon_lab</string>
+		<key>toolName</key>
+		<string>Lemon Lab</string>
+		<key>toolDesc</key>
+		<string>Discover more free Apps</string>
+		<key>recommend</key>
+		<false/>
+		<key>reportId</key>
+		<integer>7209</integer>
 	</dict>
 </dict>
 </plist>
